@@ -1,37 +1,47 @@
 package com.mantecasl.accommodationapp.business.controller;
 
+import java.util.List;
+
+import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+
 import com.mantecasl.accommodationapp.business.entity.Favorito;
 import com.mantecasl.accommodationapp.business.entity.Inmueble;
 import com.mantecasl.accommodationapp.business.entity.Usuario;
 import com.mantecasl.accommodationapp.business.persistance.FavoritoDAO;
 import com.mantecasl.accommodationapp.business.persistance.InmuebleDAO;
-import jakarta.servlet.http.HttpSession;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import jakarta.servlet.http.HttpSession;
 
 @Controller
 @RequestMapping("/favoritos")
 public class FavoritoController {
 
-    @Autowired
-    private FavoritoDAO favoritoDAO;
+    private static final String ATTR_USUARIO = "usuario";
+    private static final String REDIRECT_LOGIN_REQUIRED = "redirect:/login?loginRequerido=true";
+    private static final String REDIRECT_FAVORITOS = "redirect:/favoritos";
+    private static final String REDIRECT_CATALOGO = "redirect:/catalogo";
 
-    @Autowired
-    private InmuebleDAO inmuebleDAO;
+    private final FavoritoDAO favoritoDAO;
+    private final InmuebleDAO inmuebleDAO;
+
+    public FavoritoController(FavoritoDAO favoritoDAO, InmuebleDAO inmuebleDAO) {
+        this.favoritoDAO = favoritoDAO;
+        this.inmuebleDAO = inmuebleDAO;
+    }
 
     // MOSTRAR LISTA DE FAVORITOS 
     @GetMapping
     public String mostrarFavoritos(HttpSession session, Model model) {
 
-        Usuario usuario = (Usuario) session.getAttribute("usuario");
+        Usuario usuario = (Usuario) session.getAttribute(ATTR_USUARIO);
 
         if (usuario == null) {
-            return "redirect:/login?loginRequerido=true";
+            return REDIRECT_LOGIN_REQUIRED;
         }
 
         // Obtener todos los favoritos del usuario
@@ -52,7 +62,7 @@ public class FavoritoController {
                         return false;
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         model.addAttribute("favoritos", favoritosValidos);
         return "lista-deseos";
@@ -63,38 +73,38 @@ public class FavoritoController {
     @PostMapping("/agregar/{idInmueble}")
     public String agregarFavorito(@PathVariable Long idInmueble, HttpSession session, Model model) {
 
-        Usuario usuario = (Usuario) session.getAttribute("usuario");
+        Usuario usuario = (Usuario) session.getAttribute(ATTR_USUARIO);
         if (usuario == null) {
-            return "redirect:/login?loginRequerido=true";
+            return REDIRECT_LOGIN_REQUIRED;
         }
 
         Inmueble inmueble = inmuebleDAO.findById(idInmueble).orElse(null);
 
         if (inmueble == null) {
-            return "redirect:/catalogo";
+            return REDIRECT_CATALOGO;
         }
 
         // Evitar duplicados
         if (favoritoDAO.existsByUsuarioAndInmueble(usuario, inmueble)) {
-            return "redirect:/favoritos";
+            return REDIRECT_FAVORITOS;
         }
 
         Favorito fav = new Favorito(usuario, inmueble);
         favoritoDAO.save(fav);
 
-        return "redirect:/favoritos";
+        return REDIRECT_FAVORITOS;
     }
 
     // ELIMINAR FAVORITO
     @PostMapping("/eliminar/{id}")
     public String eliminarFavorito(@PathVariable Long id, HttpSession session) {
 
-        Usuario usuario = (Usuario) session.getAttribute("usuario");
+        Usuario usuario = (Usuario) session.getAttribute(ATTR_USUARIO);
         if (usuario == null) {
-            return "redirect:/login?loginRequerido=true";
+            return REDIRECT_LOGIN_REQUIRED;
         }
 
         favoritoDAO.deleteById(id);
-        return "redirect:/favoritos";
+        return REDIRECT_FAVORITOS;
     }
 }
