@@ -1,33 +1,58 @@
 package com.mantecasl.accommodationapp.business.controller;
 
-import com.mantecasl.accommodationapp.business.entity.*;
-import com.mantecasl.accommodationapp.business.persistance.*;
-
-import jakarta.transaction.Transactional;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+
+import com.mantecasl.accommodationapp.business.entity.Inmueble;
+import com.mantecasl.accommodationapp.business.entity.Propietario;
+import com.mantecasl.accommodationapp.business.entity.Usuario;
+import com.mantecasl.accommodationapp.business.persistance.InmuebleDAO;
+import com.mantecasl.accommodationapp.business.persistance.PropietarioDAO;
+import com.mantecasl.accommodationapp.business.persistance.UsuarioDAO;
+
+import jakarta.transaction.Transactional;
 
 @Controller
 public class GestorInmuebles {
-    @Autowired
+    
+    // Constantes para atributos del modelo
+    private static final String ATTR_INMUEBLE = "inmueble";
+    private static final String ATTR_PROPIETARIO = "propietario";
+    private static final String ATTR_USUARIO = "usuario";
+    private static final String ATTR_MENSAJE = "mensaje";
+    private static final String ATTR_ERROR = "error";
+    private static final String ATTR_PROPIEDADES = "propiedades";
+    
+    // Constantes para vistas
+    private static final String VIEW_REGISTRO_PROPIEDAD = "registro-propiedad";
+    private static final String VIEW_RESULTADO_PROPIEDAD = "resultado-propiedad";
+    private static final String VIEW_LISTA_PROPIEDADES = "lista-propiedades";
+    private static final String VIEW_DETALLE_INMUEBLE = "detalle-inmueble";
+    
     private InmuebleDAO inmuebleDAO;
-
-    @Autowired
     private UsuarioDAO usuarioDAO;
-
-    @Autowired
     private PropietarioDAO propietarioDAO;
+
+    public GestorInmuebles(InmuebleDAO inmuebleDAO,
+                           UsuarioDAO usuarioDAO,
+                           PropietarioDAO propietarioDAO) {
+        this.inmuebleDAO = inmuebleDAO;
+        this.usuarioDAO = usuarioDAO;
+        this.propietarioDAO = propietarioDAO;
+    }
 
     //Mostrar formulario de registro de propiedad
     @GetMapping("/propiedades/registro")
     public String mostrarFormulario(Model model){
-        model.addAttribute("inmueble", new Inmueble());
-        return "registro-propiedad";
+        model.addAttribute(ATTR_INMUEBLE, new Inmueble());
+        return VIEW_REGISTRO_PROPIEDAD;
     }
     
     //Completar los campos del registro de propiedad
@@ -51,8 +76,8 @@ public class GestorInmuebles {
             // Buscar el usuario por email
             Usuario usuario = usuarioDAO.findByEmail(emailPropietario);
             if (usuario == null) {
-                model.addAttribute("error", "No se encontró un usuario con ese email. Debe registrarse primero.");
-                return "registro-propiedad";
+                model.addAttribute(ATTR_ERROR, "No se encontró un usuario con ese email. Debe registrarse primero.");
+                return VIEW_REGISTRO_PROPIEDAD;
             }
 
             // Buscar si ya existe un Propietario para este usuario
@@ -86,16 +111,16 @@ public class GestorInmuebles {
             propietario.agregarInmueble(nuevoInmueble);
 
             // Mandar datos a la interfaz
-            model.addAttribute("inmueble", nuevoInmueble);
-            model.addAttribute("propietario", propietario);
-            model.addAttribute("usuario", usuario);
-            model.addAttribute("mensaje", "¡Propiedad registrada exitosamente!");
+            model.addAttribute(ATTR_INMUEBLE, nuevoInmueble);
+            model.addAttribute(ATTR_PROPIETARIO, propietario);
+            model.addAttribute(ATTR_USUARIO, usuario);
+            model.addAttribute(ATTR_MENSAJE, "¡Propiedad registrada exitosamente!");
 
-            return "resultado-propiedad";
+            return VIEW_RESULTADO_PROPIEDAD;
 
         } catch (Exception e) {
-            model.addAttribute("error", "Error al registrar la propiedad: " + e.getMessage());
-            return "registro-propiedad";
+            model.addAttribute(ATTR_ERROR, "Error al registrar la propiedad: " + e.getMessage());
+            return VIEW_REGISTRO_PROPIEDAD;
         }
     }
 
@@ -108,17 +133,17 @@ public class GestorInmuebles {
         // Filtrar solo propiedades con propietario (no nulas y no eliminadas)
         List<Inmueble> propiedadesActivas = propiedades.stream()
             .filter(inmueble -> inmueble.getPropietario() != null)
-            .collect(Collectors.toList());
+            .toList();
         
-        model.addAttribute("propiedades", propiedadesActivas);
-        return "lista-propiedades";
+        model.addAttribute(ATTR_PROPIEDADES, propiedadesActivas);
+        return VIEW_LISTA_PROPIEDADES;
     }
 
     //Ver detalles de una propiedad
     @GetMapping("/propiedades/{id}")
     public String verPropiedad(@PathVariable Long id, Model model) {
         Inmueble inmueble = inmuebleDAO.findById(id).orElseThrow(() -> new RuntimeException("Propiedad no encontrada"));
-        model.addAttribute("inmueble", inmueble);
-        return "detalle-inmueble";
+        model.addAttribute(ATTR_INMUEBLE, inmueble);
+        return VIEW_DETALLE_INMUEBLE;
     }
 }
